fixed text align in timeline

--- a/website/static/website/css/timeline.scss
+++ b/website/static/website/css/timeline.scss
@@ -17,7 +17,7 @@ $event-content-bg: #f2f2f2;
 .main-timeline .event-icon{width:32px;height:32px;border-radius:50%;background:#fff;border:3px solid $color-1n;position:absolute;top:5.5%;right:-17.5px}
 .main-timeline .year{display:block;padding:10px;margin:0;font-size:30px;color:#fff;border-radius:0 50px 50px 0;background:$color-1n;text-align:center;position:relative}
 .main-timeline .year:before{content:"";border-top:35px solid lighten($color: $color-1n, $amount: 10);border-left:35px solid transparent;position:absolute;bottom:-35px;left:0}
-.main-timeline .event-content{padding:30px 20px;margin:0 45px 0 35px;background:$event-content-bg}
+.main-timeline .event-content{text-align:left;padding:30px 20px;margin:0 45px 0 35px;background:$event-content-bg}
 
 .main-timeline .title{font-size:19px;font-weight:700;color:#504f54;margin:0 0 10px}
 .main-timeline .description{font-size:14px;color:#7d7b7b;margin:0}
